--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
         <!-- news section starts here -->
 
          <section class="relative container w-full lg:w-[1220px] mx-auto mt-30">
-            <div class="relative z-1 w-120 lg:w-[1220px] flex flex-col lg:flex-row justify-evenly mx-auto mt-10 bg-[#EFEBE3]">
+            <div class="relative z-1 w-120 lg:w-[1220px] flex flex-col lg:flex-row justify-evenly mx-auto mt-10 bg-[#EFEBE3] rounded-2xl">
                 <div><img src="c2-assets/vegetable-busket.png" alt=""></div>
                 <div class="mt-15 text-center lg:text-start">
                     <h4 class="text-4xl font-semibold">Get Grocery News!</h4>
                     <p class="text-xl mt-5">Exclusive training tips, ticks, product deals and more.</p>
-                    <input class="mt-5 px-30 py-5" type="email" name="" id="" placeholder="Enter email...."><br>
+                    <input class="mt-5 px-30 py-5 rounded-2xl" type="email" name="" id="" placeholder="Enter email...."><br>
                     <button class="px-5 py-2 text-white bg-[#179800] rounded-lg mt-5 mb-5 lg:mb-0">Subscribe</button>
                 </div>
             </div>
@@ -355,7 +355,7 @@
 
     <footer>
         <section class="container mx-auto">
-            <div class="absolute container w-full h-400 lg:h-200 mx-auto mb-100 -mt-50 flex flex-col lg:flex-row justify-around items-center bg-[#179800]">
+            <div class="absolute container w-full h-400 lg:h-200 mx-auto mb-100 -mt-75 lg:-mt-45 flex flex-col lg:flex-row justify-around items-center bg-[#179800]">
                 <div class="mt-100 ml-0 lg:ml-50 text-start">
                     <div><img src="c2-assets/logo-footer.png" alt="a footer logo will appear here"></div>
                     <p class="text-gray-200">Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
