--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
               <!-- services card here -->
         
-                <div class="w-full card grid sm:grid-cols-1 lg:grid-cols-3 mx-auto gap-6 mt-10 ml-6 lg:ml-0">
+                <div class="w-full card grid sm:grid-cols-1 lg:grid-cols-3 mx-auto gap-6 mt-10 lg:ml-0">
                           <!-- card 1 -->
 
                     <div class="text-center flex flex-col justify-center items-center w-full lg:w-[350px]  h-[400px] p-6 bg-[#EFEBE3] rounded-lg">
@@ -220,7 +220,7 @@
  
                       </div>
                       <!-- 9.3 card -->
-                      <div class="w-[250px] h-[100px] grid grid-cols-2 rounded-md bg-white">
+                      <div class="w-[250px] lg:w-[250px] h-[100px] grid grid-cols-2 rounded-md bg-white">
                         <div class="pt-5">
                             <img class="w-20 h-20 p-1" src="c2-assets/potato.png" alt="potato pic will appear here">
                         </div>
